force-app/main/default/objects/Transportation_Nomination__c/Transportation_Nomination__c.object-meta.xml
<CustomObject>
    <label>Transportation Nomination</label>
    <nameField>
        <label>Nomination</label>
        <type>AutoNumber</type>
        <displayFormat>{0000}</displayFormat>
    </nameField>
    <pluralLabel>Transportation Nominations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>