force-app/main/default/objects/Transportation_Nomination__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transportation Nominations</relationshipLabel>
    <relationshipName>Transportation_Nominations</relationshipName>
    <type>Lookup</type>
</CustomField>