force-app/main/default/objects/Transportation_Nomination__c/fields/Confirmed_Volume__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Volume__c</fullName>
    <label>Confirmed Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>