force-app/main/default/objects/Transportation_Nomination__c/fields/Contract_Reference__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reference__c</fullName>
    <label>Contract Reference</label>
    <type>Text</type>
    <length>255</length>
</CustomField>