force-app/main/default/objects/Transportation_Nomination__c/fields/Nomination_Period__c.field-meta.xml
<CustomField>
    <fullName>Nomination_Period__c</fullName>
    <label>Nomination Period</label>
    <type>Text</type>
    <length>255</length>
</CustomField>