force-app/main/default/objects/Transportation_Nomination__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Transportation Nominations</relationshipLabel>
    <relationshipName>Transportation_Nominations</relationshipName>
    <type>Lookup</type>
</CustomField>