force-app/main/default/objects/Transportation_Nomination__c/fields/Requested_Volume__c.field-meta.xml
<CustomField>
    <fullName>Requested_Volume__c</fullName>
    <label>Requested Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>