force-app/main/default/objects/Transportation_Nomination__c/fields/Shipper__c.field-meta.xml
<CustomField>
    <fullName>Shipper__c</fullName>
    <label>Shipper</label>
    <type>Text</type>
    <length>255</length>
</CustomField>